force-app/main/default/objects/Status_Task_Manager__mdt/Status_Task_Manager__mdt.object-meta.xml
<CustomObject>
    <description>Represents the order of statuses in a business process and is used to determine Tasks to create at different steps as well as validating steps in the process aren&apos;t skipped. If two Statuses are different paths at the same point in the process, they should have the same value in the Order field. For example, for Job Application, Declined, Accepted and No Offer all have the same value. Task creation is optional at each status.</description>
    <label>Status Task Manager</label>
    <pluralLabel>Status Task Manager</pluralLabel>
</CustomObject>