force-app/main/default/objects/Status_Task_Manager__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the status is currently active in the business process</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>