force-app/main/default/objects/Status_Task_Manager__mdt/fields/Default_Days_For_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Days_For_Task_Due_Date__c</fullName>
    <description>The default number of days to add to the Task Due Date. The code can ignore this and use another value if needed.</description>
    <label>Default Days For Task Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>