force-app/main/default/objects/Status_Task_Manager__mdt/fields/Default_Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Default_Task_Priority__c</fullName>
    <description>The default Task Priority for a Task that is generated. If a different Task is the required, the code doesn&apos;t need to use it.</description>
    <label>Default Task Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>