force-app/main/default/objects/Status_Task_Manager__mdt/fields/Default_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Task_Status__c</fullName>
    <description>The default Task Status to set. The code doesn&apos;t need to use this and can apply a different status</description>
    <label>Default Task Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>