force-app/main/default/objects/Status_Task_Manager__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The name of the process. This is used so that the code can find the right Status Task Generators depending on the scenario.</description>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Application</fullName>
                <default>true</default>
                <label>Job Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>