force-app/main/default/objects/Status_Task_Manager__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Status that can be searched for to find the needed Task to create</description>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>