force-app/main/default/objects/Status_Task_Manager__mdt/fields/Task_Generation_Class__c.field-meta.xml
<CustomField>
    <fullName>Task_Generation_Class__c</fullName>
    <description>The name of the Class that should be used to generate the Tasks for this status. No value is valid if no Tasks are required at that stage</description>
    <label>Task Generation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>