force-app/main/default/objects/Status_Task_Manager__mdt/fields/Valid_Next_Status__c.field-meta.xml
<CustomField>
    <fullName>Valid_Next_Status__c</fullName>
    <description>Contains a list separated by || of valid next statuses so that this can be validated in the code</description>
    <label>Valid Next Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>